# min-max-synth

./: Cargo.toml  LICENSE  README.md  build.rs  factory_presets.json
.github/workflows/: release.yml
src/: dsp.rs  editor.rs  g2p.rs  lib.rs  params.rs  preset_bank.rs  preset_snapshots.rs  presets.rs  samples.rs  voice.rs  widgets.rs
